Add news for 2026-02-07: Claude 4.6, SyGra Studio, and Context Management

--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,24 @@
 ---
-title: "."
+title: ""
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: false
   filter-ui: false
+  feed: true
 page-layout: full
-title-block-banner: true
 ---
 
+::: {.hero-banner}
+::: {.hero-title}
+AI News Digest
+:::
+::: {.hero-subtitle}
+Cutting-edge updates from the global AI frontier. <br>
+Unique insights, no-copy analysis, and daily trends.
+:::
+:::
 
+# Latest Updates
