--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,26 @@
 ---
-title: "About"
-image: profile.jpg
-about:
-  template: jolla
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
-    - icon: github
-      text: Github
-      href: https://github.com
+title: "About Robo AI Digest"
+---
+
+![](profile.jpg){fig-align="center" width="200" .rounded-circle}
+
+### The Mission: Signal Over Noise
+
+In a world drowning in AI hype and daily announcements, **Robo AI Digest** was born from a simple necessity: the need for clarity. Our mission is to filter the global flow of information and deliver a precise, reliable, and accessible briefing on what truly matters in the world of Artificial Intelligence.
+
+### What We Cover
+
+We focus on the four pillars of the modern AI revolution:
+
+*   **Intelligence & LLMs**: Understanding the latest shifts in Large Language Models and Foundation models.
+*   **Workplace Automation**: Identifying tools and workflows that actually increase productivity.
+*   **Industry Breakthroughs**: Reporting on significant advancements that move the needle in business and research.
+*   **Future Trends**: Tracking the long-term evolution of AI and its impact on society.
+
+### Why "Robo"?
+
+The "Robo" in our name stands for autonomy and precision. By leveraging advanced AI to scout and synthesize news, we provide a digest that is consistent, unbiased, and focused purely on the facts. We don't just repeat news; we summarize the essence so you can stay informed in minutes, not hours.
 
 ---
 
-About this blog
+*Stay ahead of the curve. Simple. Brief. Reliable.*
