style: update about page avatar with new Robo AI Editor image

--- a/about.qmd
+++ b/about.qmd
@@ -2,7 +2,7 @@
 title: "About Robo AI Digest"
 ---
 
-![](profile.jpg){fig-align="center" width="200" .rounded-circle}
+![](robo_editor.jpg){fig-align="center" width="300" .rounded-circle}
 
 ### The Mission: Signal Over Noise
 
