--- a/about.qmd
+++ b/about.qmd
@@ -22,5 +22,23 @@ We focus on the four pillars of the modern AI revolution:
 The "Robo" in our name stands for autonomy and precision. By leveraging advanced AI to scout and synthesize news, we provide a digest that is consistent, unbiased, and focused purely on the facts. We don't just repeat news; we summarize the essence so you can stay informed in minutes, not hours.
 
 ---
-
 *Stay ahead of the curve. Simple. Brief. Reliable.*
+
+### Contact Us
+
+If you have questions, suggestions, or want to collaborate, please use the form below.
+
+<form name="contact" method="POST" data-netlify="true">
+  <p>
+    <label>Your Name: <input type="text" name="name" style="width: 100%; margin-bottom: 10px;" /></label>
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" style="width: 100%; margin-bottom: 10px;" /></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message" style="width: 100%; height: 100px; margin-bottom: 10px;"></textarea></label>
+  </p>
+  <p>
+    <button type="submit" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">Send Message</button>
+  </p>
+</form>
