--- a/posts/2026-02-06-daily-ai-digest/index.qmd
+++ b/posts/2026-02-06-daily-ai-digest/index.qmd
@@ -3,6 +3,7 @@ title: "AI Frontier Daily: Claude Opus 4.6, GPT-5.3-Codex and Multimodal Breakth
 date: "2026-02-06"
 categories: [LLMs & Models, Agents & Automation, Research Highlights]
 image: "https://images.unsplash.com/photo-1677442136019-21780ecad995?auto=format&fit=crop&q=80&w=800"
+fig-alt: "AI Frontier Daily"
 ---
 
 # AI Frontier Daily: Claude Opus 4.6, GPT-5.3-Codex and Multimodal Breakthroughs
