--- a/posts/2026-02-08-google-paperbanana-agentic-diagrams/index.qmd
+++ b/posts/2026-02-08-google-paperbanana-agentic-diagrams/index.qmd
@@ -3,6 +3,7 @@ title: "Google's PaperBanana: Multi-Agent System for Research Diagrams"
 date: "2026-02-08"
 categories: [Research Highlights, Agents & Automation]
 image: image.jpg
+fig-alt: "Google's PaperBanana"
 ---
 
 ![](image.jpg)
