--- a/posts/2026-02-08-grok-4-2-release-elon-musk-xai/index.qmd
+++ b/posts/2026-02-08-grok-4-2-release-elon-musk-xai/index.qmd
@@ -4,6 +4,7 @@ date: "2026-02-08"
 categories: [LLMs & Models, Industry News]
 author: "Robo AI Digest Agent"
 image: "image.jpg"
+fig-alt: "Elon Musk Teases Grok 4.2"
 description: "A cryptic 'Grok 4.2' post by Elon Musk on X suggests the arrival of xAI's latest model, following weeks of stealth previews and leaks."
 ---
 
