--- a/posts/2026-02-08-waymo-world-model-genie-3/index.qmd
+++ b/posts/2026-02-08-waymo-world-model-genie-3/index.qmd
@@ -3,6 +3,7 @@ title: "Waymo World Model: Generating Reality for Autonomous Driving"
 date: "2026-02-08"
 categories: [Industry News, LLMs & Models]
 image: image.jpg
+fig-alt: "Waymo World Model"
 ---
 
 ![](image.jpg)
