--- a/posts/2026-02-06-era-of-agentic-workflows/index.qmd
+++ b/posts/2026-02-06-era-of-agentic-workflows/index.qmd
@@ -2,7 +2,7 @@
 title: "The Era of Agentic Workflows: How LlamaIndex and LangChain are Evolving"
 date: "2026-02-06"
 categories: [Agents & Automation, AI Tools & Frameworks]
-image: "https://images.unsplash.com/photo-1620712943543-bcc4638d9f8e?auto=format&fit=crop&q=80&w=800"
+image: "https://image.pollinations.ai/prompt/Agentic%20AI%20workflows%20automation%20digital%20processes%20dark%20technology?width=1024image: "https://images.unsplash.com/photo-1620712943543-bcc4638d9f8e?auto=format&fit=crop&q=80&w=800"height=512image: "https://images.unsplash.com/photo-1620712943543-bcc4638d9f8e?auto=format&fit=crop&q=80&w=800"nologo=true"
 fig-alt: "The Era of Agentic Workflows"
 description: "Exploring the shift from simple RAG to complex agentic reasoning with the latest updates from leading orchestration frameworks."
 ---
