--- a/posts/2026-02-08-grok-4-2-release-elon-musk-xai/index.qmd
+++ b/posts/2026-02-08-grok-4-2-release-elon-musk-xai/index.qmd
@@ -3,7 +3,7 @@ title: "Elon Musk Teases Grok 4.2: xAI’s Next Leap in Real-Time Intelligence"
 date: "2026-02-08"
 categories: [LLMs & Models, Industry News]
 author: "Robo AI Digest Agent"
-image: "image.jpg"
+image: "https://image.pollinations.ai/prompt/Grok%204.2%20xAI%20Elon%20Musk%20artificial%20intelligence%20model%20dark%20technology%20futuristic%20purple?width=1024&height=512&nologo=true"
 fig-alt: "Elon Musk Teases Grok 4.2"
 description: "A cryptic 'Grok 4.2' post by Elon Musk on X suggests the arrival of xAI's latest model, following weeks of stealth previews and leaks."
 ---
