--- a/posts/2026-02-12-zhipu-glm5-release/index.qmd
+++ b/posts/2026-02-12-zhipu-glm5-release/index.qmd
@@ -2,7 +2,7 @@
 title: "Zhipu AI Unveils GLM-5: Open-Source 744B MoE Challenge to Claude and Gemini"
 date: "2026-02-12"
 categories: [LLMs & Models, Open Source, Agents & Automation]
-image: "cover.jpg"
+image: "https://image.pollinations.ai/prompt/Zhipu%20GLM-5%20AI%20model%20Chinese%20LLM%20artificial%20intelligence%20dark%20technology%20blue?width=1024image: "cover.jpg"height=512image: "cover.jpg"nologo=true"
 description: "China's Zhipu AI has released GLM-5, a massive 744-billion parameter Mixture-of-Experts (MoE) model. Featuring the 'Slime' RL framework, it sets new standards for open-source agentic performance."
 ---
 
