--- a/posts/2026-02-10-oat-robotics-tokenizer/index.qmd
+++ b/posts/2026-02-10-oat-robotics-tokenizer/index.qmd
@@ -10,7 +10,7 @@ author-links:
 categories: 
   - "Agents & Automation"
   - "AI Tools & Frameworks"
-image: "https://image.pollinations.ai/prompt/robotics%20arm%20AI%20tokenizer%20futuristic%20technology%20blue%20orange%20neon%20--width%20768%20--height%20768"
+image: "https://pollinations.ai/p/robotics%20arm%20AI%20tokenizer%20futuristic%20technology%20blue%20orange%20neon%20--width%20768%20--height%20768"
 fig-alt: "Robotic arm with AI tokenizer technology, futuristic blue and orange neon lighting"
 ---
 
