Generate local SVG images for all posts

--- a/posts/2026-02-06-daily-ai-digest/index.qmd
+++ b/posts/2026-02-06-daily-ai-digest/index.qmd
@@ -2,7 +2,7 @@
 title: "AI Frontier Daily: Claude Opus 4.6, GPT-5.3-Codex and Multimodal Breakthroughs"
 date: "2026-02-06"
 categories: [LLMs & Models, Agents & Automation, Research Highlights]
-image: "https://pollinations.ai/p/AI%20artificial%20intelligence%20future%20technology%20digital%20brain%20dark%20blue?width=1024&height=512&nologo=true"
+image: "image.svg"
 fig-alt: "AI Frontier Daily"
 ---
 
