--- a/posts/2026-02-08-nvidia-c-radiov4-vision-backbone/index.qmd
+++ b/posts/2026-02-08-nvidia-c-radiov4-vision-backbone/index.qmd
@@ -2,7 +2,7 @@
 title: "NVIDIA C-RADIOv4: A Unified Vision Backbone for Scale"
 date: "2026-02-08"
 categories: [AI Tools & Frameworks, Research Highlights]
-image: "image.jpg"
+image: "image.svg"
 fig-alt: "NVIDIA C-RADIOv4"
 ---
 
