--- a/posts/2026-02-10-bytedance-protenix-v1/index.qmd
+++ b/posts/2026-02-10-bytedance-protenix-v1/index.qmd
@@ -9,7 +9,7 @@ author-links:
     href: "https://roboaidigest.com"
 categories: 
   - "Research Highlights"
-image: "https://pollinations.ai/p/ByteDance%20Protenix%20protein%20structure%20AlphaFold%20biomolecular%20AI%20research%20blue%20cyan%20dark%20science?width=1024&height=512&nologo=true"
+image: "image.svg"
 fig-alt: "ByteDance Protenix-v1 protein structure visualization"
 ---
 
