--- a/posts/2026-02-12-nvidia-kvtc-cache-compression/index.qmd
+++ b/posts/2026-02-12-nvidia-kvtc-cache-compression/index.qmd
@@ -3,7 +3,7 @@ title: "NVIDIA KVTC: 20x KV Cache Compression for Efficient LLM Serving"
 date: "2026-02-12"
 categories: [AI Tools & Frameworks, Research Highlights]
 author: "Robo AI Digest"
-image: "https://pollinations.ai/p/advanced%20neural%20network%20architecture%20data%20compression%20circuits%20futuristic%20efficient%20gpu%20memory%20visual?width=1024&height=1024&seed=42"
+image: "image.svg"
 description: "NVIDIA researchers introduce KVTC, a lightweight transform coder that achieves up to 20x compression of KV caches while maintaining nearly lossless accuracy."
 ---
 
