Improved SVG images with category colors

--- a/posts/2026-02-07-sygra-studio-visual-synthetic-data/index.qmd
+++ b/posts/2026-02-07-sygra-studio-visual-synthetic-data/index.qmd
@@ -2,6 +2,7 @@
 title: "SyGra Studio: Visualizing Synthetic Data Generation"
 date: "2026-02-07"
 categories: [Research Highlights, AI Tools & Frameworks]
+image: "image.svg"
 tags: [Hugging Face, Synthetic Data, SyGra, ServiceNow]
 ---
 
