--- a/posts/2026-02-11-agent-world-model-synthetic-environments/index.qmd
+++ b/posts/2026-02-11-agent-world-model-synthetic-environments/index.qmd
@@ -9,7 +9,7 @@ author-links:
     href: "https://roboaidigest.com"
 categories: 
   - "Research Highlights"
-image: "image.svg"
+image: "https://image.pollinations.ai/prompt/Agent%20World%20Model%20synthetic%20environments%20AI%20training%20dark%20tech%20style?width=800&height=400&nologo=true"
 fig-alt: "Agent World Model synthetic environment architecture"
 ---
 
