--- a/posts/2026-02-11-xai-founding-team-exodus/index.qmd
+++ b/posts/2026-02-11-xai-founding-team-exodus/index.qmd
@@ -9,7 +9,7 @@ author-links:
     href: "https://roboaidigest.com"
 categories: 
   - "Industry News"
-image: "image.svg"
+image: "https://image.pollinations.ai/prompt/xAI%20founding%20team%20departure%20illustration%20dark%20minimalist%20style%20blue%20red?width=800&height=400&nologo=true"
 fig-alt: "xAI founding team departure timeline illustration"
 ---
 
