--- a/posts/2026-02-14-gemini-3-deep-think-reasoning/index.qmd
+++ b/posts/2026-02-14-gemini-3-deep-think-reasoning/index.qmd
@@ -2,7 +2,7 @@
 title: "Gemini 3 Deep Think: Google's Answer to the Reasoning Race"
 date: "2026-02-14"
 categories: [LLMs & Models, Research Highlights]
-image: "image.svg"
+image: "https://pollinations.ai/p/gemini-3-deep-think-reasoning-model?width=1024&height=512&seed=20260214"
 description: "Google releases Gemini 3 Deep Think with breakthrough reasoning, passing Humanity's Last Exam and setting new standards for math and coding."
 ---
 
