--- a/posts/2026-02-07-sygra-studio-visual-synthetic-data/index.qmd
+++ b/posts/2026-02-07-sygra-studio-visual-synthetic-data/index.qmd
@@ -2,7 +2,7 @@
 title: "SyGra Studio: Visualizing Synthetic Data Generation"
 date: "2026-02-07"
 categories: [Research Highlights, AI Tools & Frameworks]
-image: "https://image.pollinations.ai/prompt/SyGra%20Studio%20Synthetic%20Data%20Generation%20AI%20dark%20background"
+image: "image.svg"
 tags: [Hugging Face, Synthetic Data, SyGra, ServiceNow]
 ---
 
