--- a/posts/2026-02-10-microsoft-orbitalbrain/index.qmd
+++ b/posts/2026-02-10-microsoft-orbitalbrain/index.qmd
@@ -10,7 +10,7 @@ author-links:
 categories: 
   - "Agents & Automation"
   - "AI Tools & Frameworks"
-image: "https://image.pollinations.ai/prompt/satellite%20constellation%20space%20ML%20earth%20orbit%20futuristic%20blue%20cyan%20--width%20768%20--height%20768"
+image: "image.svg"
 fig-alt: "Satellite constellation in space with Earth, ML technology visualization"
 ---
 
