--- a/posts/2026-02-11-transformers-js-v4-webgpu/index.qmd
+++ b/posts/2026-02-11-transformers-js-v4-webgpu/index.qmd
@@ -9,7 +9,7 @@ author-links:
     href: "https://roboaidigest.com"
 categories: 
   - "AI Tools & Frameworks"
-image: "https://image.pollinations.ai/prompt/Transformers.js%20v4%20WebGPU%20AI%20browser%20Node.js%20architecture%20dark%20cyberpunk%20style?width=800&height=400&nologo=true"
+image: "image.svg"
 fig-alt: "Transformers.js v4 WebGPU architecture diagram"
 ---
 
