Add Exa Instant neural search post - 2026-02-16

--- a/.PROJECT_LOG.md
+++ b/.PROJECT_LOG.md
@@ -44,6 +44,7 @@ World-class AI news portal focusing on unique English insights, built with Quart
 - **Klaro Fix**: Replaced broken Klaro config with working version from DomenaRynku (EN translations, mustConsent: true)
 - **Google Tag Manager**: Added GTM-WR6KBLTV with Consent Mode v2 (following DomenaRynku pattern)
 - **SVG Design Iterations**: Multiple iterations to improve readability - simplified from multi-keyword to single unique keyword per post
+- **Sitemap Fix**: Renamed PROJECT_LOG.md to .PROJECT_LOG.md to prevent it from being published to sitemap.xml
 - **New Publications**:
   - Gemini 3 Deep Think (subagent published)
   - xAI Interplanetary Ambitions
