--- a/posts/2026-02-16-exa-instant-neural-search/index.qmd
+++ b/posts/2026-02-16-exa-instant-neural-search/index.qmd
@@ -2,7 +2,7 @@
 title: "Exa Instant: The Sub-200ms Neural Search Engine Powering Real-Time Agentic Workflows"
 date: "2026-02-16"
 categories: [AI Tools & Frameworks, Agents & Automation]
-image: "EXA"
+image: "image.svg"
 description: "Exa AI launches Instant, a groundbreaking neural search engine delivering sub-200ms latency, designed to eliminate bottlenecks in real-time agentic AI workflows."
 ---
 
