Redesign SVG images - unique colors per keyword
- Each post now has unique color based on keyword hash (30-color palette)
- Large keyword watermark (200px, 20% opacity) as background
- Keyword badge below title
- Updated dark gradient background

--- a/.PROJECT_LOG.md
+++ b/.PROJECT_LOG.md
@@ -35,6 +35,14 @@ World-class AI news portal focusing on unique English insights, built with Quart
 
 ## Event Log
 
+### 2026-02-17
+
+- **Image Generation Fix**: Naprawiono skrypt generate-images.sh:
+  - Problem z parsowaniem bash (heredoc, # w URL, apostrofy)
+  - Poprawiono ekstrakcję keywordów (NVIDIA, Anthropic, SaaSpocalypse, Qwen)
+  - Dodano obsługę list-format categories w frontmatter
+  - Wygenerowano na nowo wszystkie 33 obrazki SVG
+
 ### 2026-02-14
 
 - **Image System Overhaul**: Pollinations.ai service became unreliable (HTTP 530). Replaced ALL 24 post images with local SVG files featuring:
