Fix: remove titles from thumbnails, add thumbnail-image CSS support

--- a/.PROJECT_LOG.md
+++ b/.PROJECT_LOG.md
@@ -37,6 +37,12 @@ World-class AI news portal focusing on unique English insights, built with Quart
 
 ### 2026-02-17
 
+- **Image Redesign**: Każdy post ma teraz unikalny kolor na podstawie keyworda (hash MD5 → 30 kolorów)
+  - Duży watermark keyword w tle (200px, 20% opacity)
+  - Badge z keywordem pod tytułem
+  - Kolor badge'u powtarza się w linii na dole
+  - NVIDIA = turkusowy, SaaSpocalypse = czerwony, itd.
+
 - **Image Generation Fix**: Naprawiono skrypt generate-images.sh:
   - Problem z parsowaniem bash (heredoc, # w URL, apostrofy)
   - Poprawiono ekstrakcję keywordów (NVIDIA, Anthropic, SaaSpocalypse, Qwen)
