Add post: Microsoft's MAI-1 500B model for AI independence

--- a/.PROJECT_LOG.md
+++ b/.PROJECT_LOG.md
@@ -37,6 +37,16 @@ World-class AI news portal focusing on unique English insights, built with Quart
 
 ### 2026-02-17
 
+- **Thumbnail CSS Fix**: Naprawiono wyświetlanie miniaturek na stronie głównej:
+  - Dodano obsługę klasy `.thumbnail-image` w CSS
+  - Dodano inline CSS w _quarto.yml żeby nadpisać Quarto inline style (height: 150px)
+  - Wszystkie 33 posty mają teraz widoczne obrazki
+
+- **Image Design Update**: Usunięto tytuły z obrazków SVG (były niewidoczne na miniaturach):
+  - Teraz obrazek zawiera tylko: keyword watermark w tle, badge z keywordem, kategorię, datę
+  - Większy font keyworda (220px vs 200px)
+  - Większy badge (300x50 vs 200x36)
+
 - **Image Redesign**: Każdy post ma teraz unikalny kolor na podstawie keyworda (hash MD5 → 30 kolorów)
   - Duży watermark keyword w tle (200px, 20% opacity)
   - Badge z keywordem pod tytułem
